@@ -24,6 +24,8 @@
  *  This copyright notice MUST APPEAR in all copies of the script!
  ***************************************************************/
 
+require_once(t3lib_extMgm::extPath('nkwlib')."class.tx_nkwlib.php");
+
 /**
  *
  *
